# multiavatar-python

./: .gitignore  README.md  pyproject.toml  setup.cfg
multiavatar/: multiavatar.py  test.py
multiavatar/config/: style.json
multiavatar/data/: themes.json
multiavatar/test/: reference_sample.html  test_multiavatar.py
requirements/: development.txt
tests/: build_index.py  build_other.py
