[tool.poetry]
name = "multiavatar"
version = "0.1.0"
description = "[Multiavatar](https://multiavatar.com) is a multicultural avatar generator, created by Gie Katon."
authors = ["Chakib <xakiv@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
